Fixed gap betwen items in dashboard

--- a/src/styles/dashboard.module.css
+++ b/src/styles/dashboard.module.css
@@ -111,7 +111,7 @@
 .data-box {
   width: auto;
   height: 100%;
-  gap: 0.5rem;
+  gap: 0.75rem;
 }
 
 .icon {
